--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Music Events Agenda</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <script src="js/main.js"></script>
 </head>
+
 <body>
   <header>
     <h1>🎵 Music Events Agenda</h1>
@@ -25,7 +26,5 @@
     <a href="map.html">🗺️ View Map</a> |
     <a href="favorites.html">❤️ Favorites</a>
   </footer>
-
- 
 </body>
 </html>
