--- a/event.html
+++ b/event.html
@@ -6,20 +6,19 @@
   <title>Music Events Agenda</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <script src="js/main.js"></script>
+  <script src="js/event.js"></script>
 </head>
 
 <body>
 
   <header class="header">
     <div class="logo">🎵 Music Events</div>
-    <a href="index.html" class="btn">⬅ Back</a>
+    <a id="backButton" class="btn">⬅ Back</a>
   </header>
 
   <main class="event-detail-container">
     <div id="eventDetails">Loading...</div>
   </main>
 
-  <script src="js/event.js"></script>
 </body>
 </html>
