head with SEO improved

--- a/event.html
+++ b/event.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Music Events Agenda</title>
+<meta name="author" content="Jeimy Espinoza">
+  <meta name="description" content="Explore full details of your favorite music events. Artists, venues, dates, and ticket links all in one place.">
+  <meta property="og:title" content="Event Details | Music Events Agenda">
+  <meta property="og:description" content="Discover full event details: artist, venue, date, map and tickets.">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
+  <meta property="og:url" content="https://thebestknown.github.io/eventsproject/event.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Event Details | Music Events Agenda">
+  <meta name="twitter:description" content="Explore the artist, venue, date and route for your favorite music event.">
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
+  <meta name="twitter:creator" content="@jeimyEspinoza">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
-  <script src="js/event.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
