--- a/favorites.html
+++ b/favorites.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Favorites</title>
+  <head>
+  <meta name="author" content="Jeimy Espinoza">
+  <meta name="description" content="Your saved favorite music events. Revisit concerts and shows you love.">
+  <meta property="og:title" content="Favorites | Music Events Agenda">
+  <meta property="og:description" content="Access your favorite music events with ease, maps, and ticket links.">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
+  <meta property="og:url" content="https://thebestknown.github.io/eventsproject/favorites.html">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Favorites | Music Events Agenda">
+  <meta name="twitter:description" content="Revisit the concerts and shows you've saved.">
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
+  <meta name="twitter:creator" content="@jeimyEspinoza">
+  <link rel="icon" href="assets/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
