--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Music Events Agenda</title>
+  <meta name="author" content="Jeimy Espinoza">
+  <meta name="description" content="Discover concerts and live music events near you. Explore artists, venues, and buy tickets directly.">
+  <meta property="og:title" content="Music Events Agenda">
+  <meta property="og:description" content="Find music events near your city with filters, interactive maps, and favorites.">
+  <meta property="og:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
+  <meta property="og:url" content="https://thebestknown.github.io/eventsproject/" >
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Music Events Agenda">
+  <meta name="twitter:description" content="Discover concerts and festivals in your city and beyond.">
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
+  <meta name="twitter:creator" content="@jeimyEspinoza">
+  <link rel="icon" href="">
+  <link rel="icon" href="" type="image/png">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
   <script src="js/main.js"></script>
 </head>
 
