geoapify API connected to the map

--- a/event.html
+++ b/event.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Music Events Agenda</title>
 <meta name="author" content="Jeimy Espinoza">
   <meta name="description" content="Explore full details of your favorite music events. Artists, venues, dates, and ticket links all in one place.">
@@ -15,8 +15,7 @@
   <meta name="twitter:title" content="Event Details | Music Events Agenda">
   <meta name="twitter:description" content="Explore the artist, venue, date and route for your favorite music event.">
   <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
-  <meta name="twitter:creator" content="@jeimyEspinoza">
-  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link rel="icon" href="">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/main.js"></script>
 </head>
