--- a/favorites.html
+++ b/favorites.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Favorites</title>
   <head>
   <meta name="author" content="Jeimy Espinoza">
@@ -16,8 +16,7 @@
   <meta name="twitter:title" content="Favorites | Music Events Agenda">
   <meta name="twitter:description" content="Revisit the concerts and shows you've saved.">
   <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Agenda">
-  <meta name="twitter:creator" content="@jeimyEspinoza">
-  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link rel="icon" href="">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -25,9 +24,10 @@
   <header class="header">
     <div class="logo">🎵 Music Events</div>
     <nav class="nav-links">
-      <a href="index.html">Home</a>
+      <a href="#">About</a>
+      <a href="#">Genres</a>
       <a href="map.html">Map</a>
-      <a href="favorites.html" class="active">Favorites</a>
+      <a href="favorites.html">Favorites</a>
       <button class="btn">Login</button>
     </nav>
   </header>
