icons added to the events on the map

--- a/favorites.html
+++ b/favorites.html
@@ -24,7 +24,7 @@
   <header class="header">
     <div class="logo">🎵 Music Events</div>
     <nav class="nav-links">
-      <a href="#">About</a>
+      <a href="index.html">Home</a>
       <a href="#">Genres</a>
       <a href="map.html">Map</a>
       <a href="favorites.html">Favorites</a>
