--- a/event.html
+++ b/event.html
@@ -18,6 +18,8 @@
   <link rel="icon" href="">
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/main.js"></script>
+  <script src="js/event.js"></script>
+
 </head>
 
 <body>
