--- a/favorites.html
+++ b/favorites.html
@@ -25,7 +25,7 @@
     <div class="logo">🎵 Music Events</div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
-      <a href="#">Genres</a>
+      <a href="genres.html">Genres</a>
       <a href="map.html">Map</a>
       <a href="favorites.html">Favorites</a>
       <button class="btn">Login</button>
