--- a/genres.html
+++ b/genres.html
@@ -7,13 +7,17 @@
   <meta name="description" content="Browse music events by genre like Rock, Pop, Jazz and more.">
   <meta name="author" content="Jeimy Espinoza">
   <meta name="twitter:creator" content="@jeimyEspinoza">
-  <link rel="icon" href="assets/favicon.png" type="image/png">
+  <link rel="icon" href="assets/icons/favicon.png">
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/modal.js"></script>
 </head>
 <body>
 
   <header class="header">
-    <div class="logo">🎵 Music Events</div>
+    <div class="logo">
+      <img src="assets/icons/logo-music-agenda.png" alt="Music Events Logo" class="logo-img">
+      <span>Music Events</span>
+    </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="map.html">Map</a>
@@ -38,6 +42,17 @@
       <!-- Events will appear here -->
     </section>
   </main>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <p>&copy; <span id="year"></span> Jeimy Espinoza. All rights reserved.</p>
+        <div class="footer-links">
+        <a href="#" onclick="showModal('contact'); return false;">Contact</a>
+        <a href="#" onclick="showModal('privacy'); return false;">Privacy</a>
+        <a href="#" onclick="showModal('terms'); return false;">Terms</a>
+        </div>
+      </div>
+    </footer>
 
   <script src="js/genre.js"></script>
 </body>
