--- a/map.html
+++ b/map.html
@@ -15,11 +15,12 @@
   <meta name="twitter:description" content="Find your next concert visually. Explore music events on the map and plan your route.">
   <meta name="twitter:image" content="https://via.placeholder.com/1200x630.png?text=Music+Events+Map">
   <meta name="twitter:creator" content="@jeimyEspinoza">
-  <link rel="icon" href="assets/favicon.png" type="image/png">
-
+  <link rel="icon" href="assets/icons/favicon.png">
   <title>Events Map</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="css/styles.css">
+  <script src="js/modal.js"></script>
+
 
   <style>
     .map-page {
@@ -62,7 +63,10 @@
 
 <body>
   <header class="header">
-    <div class="logo">🎵 Music Events</div>
+    <div class="logo">
+      <img src="assets/icons/logo-music-agenda.png" alt="Music Events Logo" class="logo-img">
+      <span>Music Events</span>
+    </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
       <a href="genres.html">Genres</a>
@@ -79,6 +83,22 @@
     </div>
     <div id="map"></div>
   </main>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <p>&copy; <span id="year"></span> Jeimy Espinoza. All rights reserved.</p>
+        <div class="footer-links">
+        <a href="#" onclick="showModal('contact'); return false;">Contact</a>
+        <a href="#" onclick="showModal('privacy'); return false;">Privacy</a>
+        <a href="#" onclick="showModal('terms'); return false;">Terms</a>
+        </div>
+      </div>
+    </footer>
+
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
+
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="js/map.js"></script>
