--- a/favorites.html
+++ b/favorites.html
@@ -29,10 +29,9 @@
     </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
-      <a href="genres.html">Genres</a>
       <a href="map.html">Map</a>
       <a href="favorites.html">Favorites</a>
-      <button class="btn">Login</button>
+      <a href="genre.html" class="active">Genres</a>
     </nav>
   </header>
 
