--- a/map.html
+++ b/map.html
@@ -62,6 +62,7 @@
 </head>
 
 <body>
+  
   <header class="header">
     <div class="logo">
       <img src="assets/icons/logo-music-agenda.png" alt="Music Events Logo" class="logo-img">
@@ -69,10 +70,9 @@
     </div>
     <nav class="nav-links">
       <a href="index.html">Home</a>
-      <a href="genres.html">Genres</a>
-      <a href="map.html" class="active">Map</a>
+      <a href="map.html">Map</a>
       <a href="favorites.html">Favorites</a>
-      <button class="btn">Login</button>
+      <a href="genre.html" class="active">Genres</a>
     </nav>
   </header>
 
